<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".MainActivity">
    <TextView
            android:text="@string/label_titulo"
            android:layout_width="0dp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:textSize="24sp"/>
    <TextView
            android:text="@string/label_altura"
            style="@style/label_formulario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView" android:layout_marginTop="24dp"
    />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/inputAltura" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView" app:layout_constraintEnd_toEndOf="@+id/textView"
            android:hint="@string/hint_altura_ex_1_77_m"/>
    <TextView
            android:text="@string/label_peso"
            style="@style/label_formulario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/inputAltura" app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView"/>
    <TextView
            android:text="@string/label_sexo"
            style="@style/label_formulario"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/inputPeso"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/inputPeso" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView" android:hint="@string/hint_peso_ex_82_3_kg"/>
    <Button
            android:text="@string/botao_calcular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btCalcular"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView" android:textSize="18sp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/spSexo"/>
    <Button
            android:text="@string/botao_limpar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btLimpar" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/btCalcular" app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView" android:textSize="18sp"/>
    <Spinner
            android:entries="@array/sexos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/spSexo"
            app:layout_constraintTop_toBottomOf="@+id/textView5" app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            android:layout_marginTop="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>